--- a/FreeAIr/FreeAIr.csproj
+++ b/FreeAIr/FreeAIr.csproj
@@ -46,9 +46,23 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Antlr\Answer\AdditionalCommand.cs" />
+    <Compile Include="Antlr\Answer\AnswerMarkdownListener.cs" />
+    <Compile Include="Antlr\Answer\AnswerParser.cs" />
+    <Compile Include="Antlr\Answer\ParsedAnswer.cs" />
+    <Compile Include="Antlr\Answer\Parts\CodeBlockPart.cs" />
+    <Compile Include="Antlr\Answer\Parts\CodeLinePart.cs" />
+    <Compile Include="Antlr\Answer\Parts\HeaderPart.cs" />
+    <Compile Include="Antlr\Answer\Parts\HorizontalRulePart.cs" />
+    <Compile Include="Antlr\Answer\Parts\ImagePart.cs" />
+    <Compile Include="Antlr\Answer\Parts\IPart.cs" />
+    <Compile Include="Antlr\Answer\Parts\PartTypeEnum.cs" />
+    <Compile Include="Antlr\Answer\Parts\TextPart.cs" />
+    <Compile Include="Antlr\Answer\Parts\UrlPart.cs" />
+    <Compile Include="Antlr\Answer\Parts\XmlNodePart.cs" />
     <Compile Include="Antlr\Context\ContextParser.cs" />
     <Compile Include="Antlr\ErrorListener.cs" />
-    <Compile Include="Antlr\IAnswerParser.cs" />
+    <Compile Include="Antlr\IParser.cs" />
     <Compile Include="Antlr\MarkdownListener.cs" />
     <Compile Include="Antlr\Prompt\PromptParser.cs" />
     <Compile Include="BLogic\Chat.cs" />
@@ -111,6 +125,7 @@
     <Compile Include="Helper\RegExHelper.cs" />
     <Compile Include="Helper\ResourceHelper.cs" />
     <Compile Include="Helper\RoslynHelper.cs" />
+    <Compile Include="Helper\ScrollHelper.cs" />
     <Compile Include="Helper\SolutionHelper.cs" />
     <Compile Include="Helper\StringHelper.cs" />
     <Compile Include="Helper\TextDescriptorHelper.cs" />
@@ -118,7 +133,6 @@
     <Compile Include="Helper\LanguageHelper.cs" />
     <Compile Include="Helper\LineEndingHelper.cs" />
     <Compile Include="BLogic\UserPrompt.cs" />
-    <Compile Include="Helper\MarkdownScrollViewerExtensions.cs" />
     <Compile Include="Helper\RoslynDocumentHelper.cs" />
     <Compile Include="Helper\SuggestionHijackHelper.cs" />
     <Compile Include="ImageMonikers.cs" />
@@ -165,6 +179,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>source.extension.vsixmanifest</DependentUpon>
     </Compile>
+    <Compile Include="UI\BindingProxy.cs" />
     <Compile Include="UI\CodeLens\CodeLenseUserControl.xaml.cs">
       <DependentUpon>CodeLenseUserControl.xaml</DependentUpon>
     </Compile>
@@ -175,9 +190,12 @@
       <DependentUpon>MenuButton.xaml</DependentUpon>
     </Compile>
     <Compile Include="UI\Converters.cs" />
+    <Compile Include="UI\Dialog\DialogControl.xaml.cs">
+      <DependentUpon>DialogControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UI\Embedillo\Answer\Parser\CommandAnswerPart.cs" />
-    <Compile Include="UI\Embedillo\Answer\Parser\IAnswerPart.cs" />
-    <Compile Include="UI\Embedillo\Answer\Parser\ParsedAnswer.cs" />
+    <Compile Include="UI\Embedillo\Answer\Parser\IParsedPart.cs" />
+    <Compile Include="UI\Embedillo\Answer\Parser\Parsed.cs" />
     <Compile Include="UI\Embedillo\Answer\Parser\SelectedSpan.cs" />
     <Compile Include="UI\Embedillo\Answer\Parser\SolutionItemAnswerPart.cs" />
     <Compile Include="UI\Embedillo\Answer\Parser\StringAnswerPart.cs" />
@@ -264,6 +282,9 @@
       <Link>RELEASE_NOTES.md</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
+    <Antlr4 Include="Antlr\Answer\AnswerMarkdown.g4">
+      <Generator>MSBuild:Compile</Generator>
+    </Antlr4>
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
       <Generator>VsixManifestGenerator</Generator>
@@ -302,6 +323,9 @@
     <PackageReference Include="Antlr4BuildTasks">
       <Version>12.10.0</Version>
     </PackageReference>
+    <PackageReference Include="AvalonEdit">
+      <Version>6.3.1.120</Version>
+    </PackageReference>
     <PackageReference Include="Community.VisualStudio.VSCT" Version="16.0.29.6" PrivateAssets="all" />
     <PackageReference Include="Community.VisualStudio.Toolkit.17" Version="17.0.533" ExcludeAssets="Runtime">
       <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -317,9 +341,6 @@
     </PackageReference>
     <PackageReference Include="JsonPath.Net">
       <Version>2.1.1</Version>
-    </PackageReference>
-    <PackageReference Include="MdXaml">
-      <Version>1.27.0</Version>
     </PackageReference>
     <PackageReference Include="MessagePack">
       <Version>2.5.187</Version>
@@ -424,6 +445,10 @@
     <Page Include="UI\ContextMenuButton\MenuButton.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UI\Dialog\DialogControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="UI\Embedillo\EmbedilloControl.xaml">
       <Generator>MSBuild:Compile</Generator>
