--- a/FreeAIr/FreeAIr.csproj
+++ b/FreeAIr/FreeAIr.csproj
@@ -75,7 +75,8 @@
     <Compile Include="BLogic\ChatHelper.cs" />
     <Compile Include="BLogic\ChatKindEnum.cs" />
     <Compile Include="BLogic\ChatStatusEnum.cs" />
-    <Compile Include="BLogic\CommitMessageBuilder.cs" />
+    <Compile Include="Commands\NLOutlines\AddNaturalLanguageOutlines_ForFile_AgentsContextMenu_DynamicCommand.cs" />
+    <Compile Include="Git\CommitMessageBuilder.cs" />
     <Compile Include="BLogic\CompletionProposal.cs" />
     <Compile Include="BLogic\Context\ChatContext.cs" />
     <Compile Include="BLogic\Context\ChatContextEventArgs.cs" />
@@ -102,9 +103,15 @@
     <Compile Include="Find\FileTypesFilter.cs" />
     <Compile Include="Find\FindScopeContextMenuCommandBridge.cs" />
     <Compile Include="Find\FindWindowModifier.cs" />
+    <Compile Include="Git\GitCollectBackgroundTask.cs" />
     <Compile Include="Git\GitDiffCombiner.cs" />
+    <Compile Include="Git\GitNaturalLanguageOutliner.cs" />
     <Compile Include="Git\GitRepositoryProvider.cs" />
     <Compile Include="Git\GitRunner.cs" />
+    <Compile Include="Git\GitWindowModifier.cs" />
+    <Compile Include="Git\Parser\GitDiff.cs" />
+    <Compile Include="Git\Parser\GitDiffChunk.cs" />
+    <Compile Include="Git\Parser\GitDiffFile.cs" />
     <Compile Include="Helper\CommentHelper.cs" />
     <Compile Include="Helper\DTEHelper.cs" />
     <Compile Include="Helper\EmbeddedResourceHelper.cs" />
@@ -347,6 +354,9 @@
     <PackageReference Include="Community.VisualStudio.VSCT" Version="16.0.29.6" PrivateAssets="all" />
     <PackageReference Include="Community.VisualStudio.Toolkit.17" Version="17.0.533" ExcludeAssets="Runtime">
       <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="DiffPatch">
+      <Version>2.0.0</Version>
     </PackageReference>
     <PackageReference Include="editorconfig">
       <Version>0.15.0</Version>
