Going to NL search with RAG. Step 2.

--- a/FreeAIr/FreeAIr.csproj
+++ b/FreeAIr/FreeAIr.csproj
@@ -103,7 +103,8 @@
     <Compile Include="Find\FileTypesFilter.cs" />
     <Compile Include="Find\FindWindowModifier.cs" />
     <Compile Include="Git\GitCollectBackgroundTask.cs" />
-    <Compile Include="Git\GitDiffCombiner.cs" />
+    <Compile Include="Git\GitDiffCollector.cs" />
+    <Compile Include="Git\GitDiffCreator.cs" />
     <Compile Include="Git\GitNaturalLanguageOutliner.cs" />
     <Compile Include="Git\GitRepositoryProvider.cs" />
     <Compile Include="Git\GitRunner.cs" />
@@ -183,9 +184,9 @@
     <Compile Include="NLOutline\Json\Objects.cs" />
     <Compile Include="NLOutline\NaturalLanguageOutline.cs" />
     <Compile Include="NLOutline\NaturalLanguageOutlineCollection.cs" />
-    <Compile Include="NLOutline\Tree\Builder\File\FileBuilder.cs" />
+    <Compile Include="NLOutline\Tree\Builder\File\FileScanner.cs" />
     <Compile Include="NLOutline\Tree\Builder\TreeBuilder.cs" />
-    <Compile Include="NLOutline\Tree\OutlineNode.cs" />
+    <Compile Include="NLOutline\Tree\OutlineDescriptor.cs" />
     <Compile Include="Options\InternalPage.cs" />
     <Compile Include="Options\OptionsProvider.cs" />
     <Compile Include="Options\ResponsePage.cs" />
@@ -237,6 +238,7 @@
     <Compile Include="UI\Embedillo\VisualLine\Command\CommandVisualLineGeneratorFactory.cs" />
     <Compile Include="UI\Embedillo\VisualLine\SolutionItem\SolutionItemSuggestion.cs" />
     <Compile Include="UI\Embedillo\VisualLine\SolutionItem\SolutionItemVisualLineGeneratorFactory.cs" />
+    <Compile Include="UI\NullToUnsetValueConverter.cs" />
     <Compile Include="UI\OpenContextMenuOnLeftClickBehavior.cs" />
     <Compile Include="UI\Theme.cs" />
     <Compile Include="UI\ToolWindows\ChooseModelToolWindow.cs" />
@@ -256,6 +258,10 @@
       <DependentUpon>NestedCheckBoxList.xaml</DependentUpon>
     </Compile>
     <Compile Include="UI\NestedCheckBox\CheckableItem.cs" />
+    <Compile Include="UI\ToolWindows\BuildNaturalLanguageOutlinesJsonFileToolWindow.cs" />
+    <Compile Include="UI\ToolWindows\BuildNaturalLanguageOutlinesTreeToolWindowControl.xaml.cs">
+      <DependentUpon>BuildNaturalLanguageOutlinesTreeToolWindowControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UI\ToolWindows\NaturalLanguageOutlinesToolWindow.cs" />
     <Compile Include="UI\ToolWindows\NaturalLanguageOutlinesToolWindowControl.xaml.cs">
       <DependentUpon>NaturalLanguageOutlinesToolWindowControl.xaml</DependentUpon>
@@ -268,6 +274,7 @@
     <Compile Include="UI\ViewModels\ChooseChatAgentViewModel.cs" />
     <Compile Include="UI\ViewModels\ControlCenterViewModel.cs" />
     <Compile Include="UI\ViewModels\DialogViewModel.cs" />
+    <Compile Include="UI\ViewModels\BuildNaturalLanguageOutlinesJsonFileToolViewModel.cs" />
     <Compile Include="UI\ViewModels\NaturalLanguageOutlinesViewModel.cs" />
     <Compile Include="UI\ViewModels\NaturalLanguageResultsViewModel.cs" />
     <Compile Include="UI\Windows\AgentConfigureWindow.xaml.cs">
@@ -504,6 +511,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UI\NestedCheckBox\NestedCheckBoxList.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UI\ToolWindows\BuildNaturalLanguageOutlinesTreeToolWindowControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
