Added window to edit actions.

--- a/FreeAIr/FreeAIr.csproj
+++ b/FreeAIr/FreeAIr.csproj
@@ -275,6 +275,7 @@
     <Compile Include="UI\ToolWindows\NaturalLanguageResultsToolWindowControl.xaml.cs">
       <DependentUpon>NaturalLanguageResultsToolWindowControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UI\ViewModels\ActionConfigureViewModel.cs" />
     <Compile Include="UI\ViewModels\AgentConfigureViewModel.cs" />
     <Compile Include="UI\ViewModels\ChooseChatAgentViewModel.cs" />
     <Compile Include="UI\ViewModels\ControlCenterViewModel.cs" />
@@ -283,6 +284,9 @@
     <Compile Include="UI\ViewModels\NaturalLanguageOutlinesViewModel.cs" />
     <Compile Include="UI\ViewModels\NaturalLanguageResultsViewModel.cs" />
     <Compile Include="UI\ViewModels\OutlineEmbeddingOutputPanel.cs" />
+    <Compile Include="UI\Windows\ActionConfigureWindow.xaml.cs">
+      <DependentUpon>ActionConfigureWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UI\Windows\AgentConfigureWindow.xaml.cs">
       <DependentUpon>AgentConfigureWindow.xaml</DependentUpon>
     </Compile>
@@ -531,6 +535,10 @@
     <Page Include="UI\ToolWindows\NaturalLanguageResultsToolWindowControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UI\Windows\ActionConfigureWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="UI\Windows\AgentConfigureWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
